syntax = "proto3";

package greet;

option go_package = "github.com/vova4o/grpc-go-study/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreeterService {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
    rpc LongGreet(stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);
    rpc GreetWithDeadLine (GreetRequest) returns (GreetResponse);
}

message SummTwoIntsRequest {
    int32 a = 1;
    int32 b = 2;
}

message SummTwoIntsResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc Summ(SummTwoIntsRequest) returns (SummTwoIntsResponse);   
}